# brigid

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.orig  README.md  brigid-0.9-1.rockspec  brigid-1.0-1.rockspec  brigid-1.17-1.rockspec  brigid-core-1.0-1.rockspec  brigid.def  brigid.hpp  brigid_version.m4  brigid_zone.lua  brigid_zone.sh  ccrypt.cpp  common.cpp  common.hpp  configure.ac  crypto_android.cpp  crypto_apple.cpp  crypto_openssl.cpp  crypto_windows.cpp  evp.cpp  module.cpp  module.hpp  test.sh  version.m4  windows.mk
docs/: build-script.md  code.lua  decrypt-chacha20.sh  decrypt-salted.lua  decrypt.sh  dep-windows.sh  encrypt-chacha20.sh  encrypt-salted.sh  encrypt.sh  fork-android.md  fork-ios.md  fork.md  httpd-log-format.lua  index.html  publish.lua
include/brigid/: crypto.hpp  error.hpp  http.hpp  stdio.hpp  version.hpp
java/jp/brigid/: Crypto.java
java/jp/brigid/core/: Crypto.java
m4/: update.sh
src/exp/: Http.java  apple.mk  http.hpp  http.mm  http_apple.mm  http_windows.cpp  java.mk  main.cpp  main.lua  windows.mk
src/java/: java.mk
src/java/jp/brigid/: AESCryptor.java  AESDecryptor.java  AESEncryptor.java  Encryptor.java  HTTPSession.java  Hasher.java  HttpAuthenticator.java  HttpSession.java  HttpTask.java
src/lib/: Makefile.am  common_java.cpp  common_java.hpp  common_windows.cpp  common_windows.hpp  crypto.cpp  crypto_apple.cpp  crypto_impl.cpp  crypto_impl.hpp  crypto_java.cpp  crypto_openssl.cpp  crypto_windows.cpp  error.cpp  error.hpp  error_windows.cpp  http.cpp  http_apple.mm  http_curl.cpp  http_curl.hpp  http_impl.cpp  http_impl.hpp  http_java.cpp  http_windows.cpp  java.cpp  java.hpp  java.mk  stdio.cpp  type_traits.hpp  util_java.cpp  util_java.hpp  util_windows.cpp  util_windows.hpp  version.cpp  windows.mk
src/lua/: Makefile.am  common.cpp  common.hpp  common.lua  common_java.cpp  common_java.hpp  common_windows.cpp  common_windows.hpp  crypto.cpp  crypto.hpp  crypto_apple.cpp  crypto_java.cpp  crypto_openssl.cpp  crypto_windows.cpp  cryptor.cpp  cryptor.hpp  data.cpp  data.hpp  data_writer.cpp  dir.cpp  dir_unix.cpp  dir_unix.hpp  dir_windows.cpp  dir_windows.hpp  error.cpp  error.hpp  file_writer.cpp  function.cpp  function.hpp  hasher.cpp  hasher.cxx  hasher.hpp  hasher.rl  http.cpp  http.hpp  http_apple.mm  http_curl.cpp  http_impl.cpp  http_impl.hpp  http_java.cpp  (+53 more)
src/tool/: Makefile.am  brigid_zone_generate.cpp  brigid_zone_random.cpp
test/: test.lua  test_ccrypt.lua  test_crypto.lua  test_evp.lua
test/bench/: Makefile.am  bench.bat  bench.lua  bench.sh  bench_compare.cpp  bench_compare.cxx  bench_compare.rl
test/cgi/: cat.cgi  cookie.cgi  echo.cgi  nph-header.cgi  redirect.cgi
test/jni/: GNUmakefile  test.cpp
test/lab/: Makefile.am  abnf.lua  client.cpp  errata.txt  http_request_parser.hpp  http_request_parser.rl  machine-string01.rl  machine-unicode01.rl  objc.lua  ragel.mk  request-chrome.txt  request-error01.txt  request-error02.txt  request-error03.txt  request-pico-bench.txt  request-safari.txt  request-test01.txt  request-test02.txt  request-test03.txt  request-test04.txt  request-test05.txt  request-test06.txt  test.rl  test_address_space.cpp  test_address_space01.lua  test_address_space02.lua  test_address_space03.lua  test_address_space04.lua  test_address_space05.lua  test_client.cpp  test_common.hpp  test_goto.rl  test_goto.txt  test_json.rl  test_parser.cpp  test_ragel.hpp  test_ragel.rl  test_server.cpp  test_ubench.lua  test_websocket_server.cpp  (+8 more)
test/lib/: JNITest.java  JavaTest.java  Makefile.am  Test.java  java.mk  jnitest.cpp  test.cpp  test.hpp  test_crypto.cpp  test_encryptor.cpp  test_http.cpp  test_http_curl.cpp  test_http_impl.cpp  test_java.cpp  test_main.cpp  test_version.cpp  windows.mk
test/love/: GNUmakefile  conf.lua  main.lua  thread.lua  version.sh
test/lua/: JavaTest.java  Makefile.am  conf.lua  echo.cgi  echo.lua  java.mk  love.mk  main.lua  nph-header.cgi  redirect.lua  test.bat  test.lua  test.sh  test_common.lua  test_crypto.lua  test_data.lua  test_data_writer.lua  test_file_writer.lua  test_http.lua  test_http_client.lua  test_java.cpp  test_json.lua  test_main.lua  test_stopwatch.lua  test_suite.lua  test_suites.lua  test_to_be_closed.lua  test_ubench.lua  test_version.lua  test_view.lua  test_writer.lua  test_zone.lua  thread.lua
tool/: vs2013_x64.bat  vs2013_x86.bat
